--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
     <uses-feature android:name="android.hardware.sensor.accelerometer"  android:required="true" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission-group.SENSORS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/hommy_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/hommy_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -25,7 +26,6 @@
         <activity android:name=".WelcomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -52,7 +52,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".Challenge"></activity>
+        <activity android:name=".Challenge"/>
     </application>
 
 </manifest>
