--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
         <activity android:name=".Challenge" />
         <activity
             android:name=".VoiceHzChallenge"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".Feedback"></activity>
     </application>
 
 </manifest>
