--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,8 @@
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".Feedback" />
         <activity android:name=".RankingActivity" />
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".GameOverActivity"></activity>
     </application>
 
 </manifest>
